examples/kubernetes/full-stack/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    app.kubernetes.io/name: opa
    app.kubernetes.io/component: authorization
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opa
    app.kubernetes.io/component: authorization
  ports:
    - name: http
      port: 8181
      targetPort: http
      protocol: TCP
